@@ -3,13 +3,13 @@ Hash: SHA256
 
 AUX docker-py-0.3.2-no-version-lock.patch 641 SHA256 bb3ef697720a8934a822204d137873d82c7473f44a2ebde3b969916c9c395e25 SHA512 d8d4c8335ee8fe318ef013e38ff6147a8de1ddc4636d251fab2bb4ae0b4f42f2e9a25ee90ad24839b10d67b3e909804d38639f9b5ff74f9a4a90bc81ad1e4fee WHIRLPOOL e0c1c500fb8a2000bb50cda09dac4a271b0c9e1ae0108e4c3bee02d1db30343c00aeaae400b1b6338ff356218463e3b0898065343f0a6a5a8aac75ff2df72912
 DIST docker-py-0.3.2.tar.gz 18639 SHA256 146de3243219e6358e63c93fcd34116330b165669b8bdc0880bfc2271c552e65 SHA512 f6873b56b1ce87cdb907abe1a84383b435b1fe21cb71c5132a2cfd6d2434c6b71675b2de007f9fcbe5641ab7eb21bccdc5df6d009f0542e1aff6dc7c64014bda WHIRLPOOL c931fae60a51bc3866287c6d4dbb854da4d0d9ce0aa9e92244db683354b21cbebb2edd901efd5a7f2eda59229a50a3a54aad17ee7408940df4e11bf96da3392b
-EBUILD docker-py-0.3.2.ebuild 871 SHA256 868bcdc581a529a5a937c11a98d9e32efdd1153d2d5421c26014691e0714cfaf SHA512 0aa29d885d2f7a083079429a0482c576d0ad728d5246e58e7c60843806499a97fd5a9d97b23e08c896eee46febebd1f77ed68613a2b659aaea771775e2f456e2 WHIRLPOOL 52ba0be4f1cb30391479a14658f18b1d8184ac529f2538e8a3890b27a7bb014dbb9046fe14634b922230da71c7aea18905b5134c8412a8e431bffd88c5735fd5
-MISC ChangeLog 731 SHA256 358b5dfbc2bac21e9acbd19a25a8d3170240c306b0c307f85212e82a9936bfe6 SHA512 a41cdb829f57e30fd034d092ca459c8dc7ead0b899bbe431fcb3986014bc636aa1765220299f06a7d3407f4247555f6659c5d31109f872e036ea8b68d7e9da6b WHIRLPOOL a239b8945133e388951c69c6a1441647021a165c4bf6699b16dea8de519dcd486f3edb83590e0ec48c7dae5eb83a2236095ce03edff5545474d560793b08e828
+EBUILD docker-py-0.3.2.ebuild 919 SHA256 d08ef7f72e67b0a4b965d1c551d426db54686ce8b95db2c8ed8a0d2777ab1a08 SHA512 0057ef41251cb60295069c99ed5b650f9bf2b00d252fa1c28287906b20f84dca3667796041aa8d8d16e1b982ff557b5d3df8d7ffbb5a09b06b65b364d3589d3b WHIRLPOOL 8014a63a5f4d06faeff9db5f31c4214ea6a66872dc63a1dc24f26dd85858d6d5ece1622007a03b3823edcc9fcff9f670577eea64a5934f26b69f2304053543ba
+MISC ChangeLog 861 SHA256 3b8dc3a5c6ad3c9d9ea35f4b716bcaba116fb4ada27eb17dc623fc72ed65c58c SHA512 3fd87f81866d1957aa6181dc7afe98f9c166f170e4be5c61bf4c703fd019ee5b578a9213edab9fc926355e25d8711dd718e9240e42d2a813787ec6088049f809 WHIRLPOOL 7545275ff3916f9c0e894daaa748e57a9a60f501eda312f0f42f69b7e8a2ff79cdad9952cf1c185718fa8c68469fb1ac5883db93bf234e4492c7c522793ea02a
 MISC metadata.xml 240 SHA256 694be2f723bc23a51edc09b5ab157b8bf0a859d8e92da38547227b5bec190ed7 SHA512 77bf3ea5b030d36bc970e889d1bda38da70bbf0d9c2d6ca1c5f596ede009165889f7656e72860ecd044e68a75944a3291668b6845d7d5dbab2556c08e3714a6d WHIRLPOOL f0279844afb07300ca26bd8ce2a9461b55d119bf0144ee6791d7fa49b7f054536316900296227dc4ea7ab3afa674f4d0be51eff49629cbc53f394078da47d8c4
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlP8WY0ACgkQso7CE7gHKw0g1gCfUY687a1uD8Sa38KjcblzE3Zu
-i0IAn0v7LoekMiroh99XtlF4LUY+GqXN
-=3aut
+iEYEAREIAAYFAlQD0bcACgkQso7CE7gHKw2HJwCeNY2GyIjUVlT3LZ/vCSWu6oX+
+Fx8An0QDmIajckj7q8JcQgt7HgS9g62f
+=Aej9
 -----END PGP SIGNATURE-----
