@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/docker-py/docker-py-0.3.2.ebuild,v 1.3 2014/08/10 21:09:35 slyfox Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/docker-py/docker-py-0.3.2.ebuild,v 1.4 2014/09/01 02:03:08 idella4 Exp $
 
 EAPI=5
 PYTHON_COMPAT=( python{2_7,3_{3,4}} )
@@ -18,7 +18,8 @@ IUSE="test"
 DEPEND="dev-python/setuptools[${PYTHON_USEDEP}]
 	test? ( >=dev-python/mock-1.0.1[${PYTHON_USEDEP}] )"
 RDEPEND=">=dev-python/requests-2.2.1[${PYTHON_USEDEP}]
-	>=dev-python/six-1.3.0[${PYTHON_USEDEP}]"
+	>=dev-python/six-1.3.0[${PYTHON_USEDEP}]
+	dev-python/websocket-client[${PYTHON_USEDEP}]"
 
 PATCHES=(
 	"${FILESDIR}"/${P}-no-version-lock.patch
