@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/docker-py
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/docker-py/ChangeLog,v 1.4 2014/08/26 10:04:17 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/docker-py/ChangeLog,v 1.5 2014/09/01 02:03:08 idella4 Exp $
+
+  01 Sep 2014; Ian Delaney <idella4@gentoo.org> docker-py-0.3.2.ebuild:
+  add dep to support py2.7, fixes Bug #520912 by B. Coca
 
   26 Aug 2014; Ian Delaney <idella4@gentoo.org> metadata.xml:
   add remote-id to metadata.xml
